--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <HTML>
-<BODY background-color="#004488">
-<H1 color="#FFFFFF">HTML File From https://github.com/mspjp/20170426tsukubaHandson-deploy/new/master</H1>
+<BODY style="background:#004488;">
+<H1 style="color:#FFFFFF;">HTML File</H1>
+<DIV style="color:#FFFFFF;">From https://github.com/mspjp/20170426tsukubaHandson-deploy/new/master</DIV>
 
 </BODY>
 </HTML>
